loopdowhile.Poucet2.scala.code
while(!sortieTrouvee){
  var nbBiscuit = 0
  do{
    avance()
  	if(estSurBiscuit){
      nbBiscuit = nbBiscuit + 1
    }
  } while (crossing)
  if (nbBiscuit<=2){
    doite()
  }
  else{
    gauche()
  }
}
avance()